[*] dialog style & lang

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -81,7 +81,7 @@
     <color name="textColorSecondaryDark">#9E9E9E</color>
 
     <color name="bottomNavColor">#008577</color>
-    <color name="bottomNavColorDark">#4C4C4C</color>
+    <color name="bottomNavColorDark">#4B5057</color>
 
 
 </resources>
