--- a/app/src/main/res/layout/bottom_menu_add_bid.xml
+++ b/app/src/main/res/layout/bottom_menu_add_bid.xml
@@ -186,7 +186,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add"
-        android:textColor="?textColorSecondary"
+        android:textColor="?iconColor"
         app:icon="@drawable/bid"
         app:iconPadding="@dimen/padding_middle"
         app:iconTint="?iconColor"
