--- a/app/src/main/res/layout/bottom_menu_choose_bid.xml
+++ b/app/src/main/res/layout/bottom_menu_choose_bid.xml
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/choose"
-        android:textColor="?textColorSecondary"
+        android:textColor="?iconColor"
         app:icon="@drawable/bid"
         app:iconPadding="@dimen/padding_middle"
         app:iconTint="?iconColor"
