--- a/app/src/main/res/layout/fragment_pager_project_overview.xml
+++ b/app/src/main/res/layout/fragment_pager_project_overview.xml
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_middle"
         android:text="@string/profile"
-        android:textColor="?textColorSecondary"
+        android:textColor="?iconColor"
         app:layout_constraintBottom_toBottomOf="@id/avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/avatar" />
