--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -82,6 +82,8 @@
         <item>Комиссию оплачиваю я</item>
         <item>Комиссию оплачивает фрилансер</item>
         <item>Комиссия делится пополам</item>
+        <item>Прямой расчет</item>
+        <item>Бизнес сейф</item>
     </string-array>
 
     <string-array name="pref_theme_entries">
