--- a/app/src/main/res/layout/activity_new_job.xml
+++ b/app/src/main/res/layout/activity_new_job.xml
@@ -203,6 +203,7 @@
                 </TableRow>
 
                 <TableRow
+                    android:id="@+id/plusView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/padding_middle"
