--- a/app/src/main/res/layout/item_freelancers_reviews_list.xml
+++ b/app/src/main/res/layout/item_freelancers_reviews_list.xml
@@ -89,7 +89,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/back_grade"
-                            android:text="Качество"
+                            android:text="@string/quality"
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -124,7 +124,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/back_grade"
-                            android:text="Профессионализм"
+                            android:text="@string/professionalism"
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -159,7 +159,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/back_grade"
-                            android:text="Стоимость"
+                            android:text="@string/cost"
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -194,7 +194,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/back_grade"
-                            android:text="Контактность"
+                            android:text="@string/connectivity"
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -229,7 +229,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/back_grade"
-                            android:text="Сроки"
+                            android:text="@string/schedule"
                             android:textColor="@color/white" />
                     </LinearLayout>
 
