--- a/app/src/main/res/layout/fragment_pager_project_bids.xml
+++ b/app/src/main/res/layout/fragment_pager_project_bids.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        app:checkedButton="@id/bidsActive"
+        app:selectionRequired="true"
         app:singleSelection="true">
 
         <com.google.android.material.button.MaterialButton
