--- a/app/src/main/res/layout/fragment_my_projects.xml
+++ b/app/src/main/res/layout/fragment_my_projects.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/projectsFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
