[+] App first start language

--- a/app/src/main/res/layout/bottom_menu_add_bid.xml
+++ b/app/src/main/res/layout/bottom_menu_add_bid.xml
@@ -131,7 +131,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="1"
+                android:hint="@string/_1"
                 android:inputType="number"
                 android:textAppearance="@style/TextStyle.Title.Sub"
                 android:textColor="?textColorSecondary"
