--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,24 +6,23 @@
         android:title="@string/pref_app_title">
 
         <ListPreference
-            app:icon="@drawable/theme"
+            android:dialogTitle="@string/pref_language"
+            android:entries="@array/pref_language_entries"
+            android:entryValues="@array/pref_language_values"
+            android:key="KEY_APP_LANGUAGE"
+            android:summary="%s"
+            android:title="@string/pref_language"
+            app:icon="@drawable/lang" />
+
+        <ListPreference
             android:defaultValue="@string/pref_theme_default"
             android:dialogTitle="@string/pref_theme"
             android:entries="@array/pref_theme_entries"
             android:entryValues="@array/pref_theme_values"
             android:key="KEY_APP_THEME"
             android:summary="%s"
-            android:title="@string/pref_theme" />
-
-        <ListPreference
-            app:icon="@drawable/lang"
-            android:defaultValue="@string/pref_language_default"
-            android:dialogTitle="@string/pref_language"
-            android:entries="@array/pref_language_entries"
-            android:entryValues="@array/pref_language_values"
-            android:key="KEY_APP_LANGUAGE"
-            android:summary="%s"
-            android:title="@string/pref_language" />
+            android:title="@string/pref_theme"
+            app:icon="@drawable/theme" />
 
     </PreferenceCategory>
 
