--- a/app/src/main/res/layout/fragment_freelancers.xml
+++ b/app/src/main/res/layout/fragment_freelancers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/freelancersFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -28,6 +29,18 @@
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         </FrameLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            android:src="@drawable/filter"
+            app:backgroundTint="@color/colorPrimary"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+            app:tint="@color/white"
+            />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
