--- a/app/src/main/res/layout/fragment_employers.xml
+++ b/app/src/main/res/layout/fragment_employers.xml
@@ -40,6 +40,18 @@
 
         </FrameLayout>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            android:src="@drawable/filter"
+            app:backgroundTint="@color/colorPrimary"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+            app:tint="@color/white"
+            />
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
