--- a/app/src/main/res/layout/item_threads_list.xml
+++ b/app/src/main/res/layout/item_threads_list.xml
@@ -49,14 +49,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_middle"
-                android:layout_marginTop="@dimen/padding_small"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:ellipsize="end"
                 android:textColor="?textColorSecondary"
-                app:layout_constraintBottom_toBottomOf="@id/icon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/icon"
-                app:layout_constraintTop_toTopOf="@id/icon"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Workspace for project High-budget project" />
 
             <tech.hombre.freelancehunt.common.widgets.CustomImageView
