--- a/app/src/main/res/layout/activity_thread_messages.xml
+++ b/app/src/main/res/layout/activity_thread_messages.xml
@@ -39,6 +39,7 @@
                 android:id="@+id/editorLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="48dp"
                 android:background="?colorPrimary"
                 android:elevation="4dp"
                 android:gravity="center_vertical"
@@ -61,13 +62,13 @@
                 <tech.hombre.freelancehunt.common.widgets.EditorEditText
                     android:id="@+id/editText"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@color/transparent"
                     android:gravity="center_vertical|start"
                     android:hint="@string/type_here"
                     android:inputType="textMultiLine|textCapSentences"
-                    android:maxLines="3"
+                    android:maxLines="4"
                     android:minLines="1"
                     android:padding="@dimen/padding_middle"
                     android:scrollbars="vertical"
