--- a/app/src/main/res/layout/item_threads_list.xml
+++ b/app/src/main/res/layout/item_threads_list.xml
@@ -86,6 +86,7 @@
                 android:layout_width="0dp"
                 android:layout_height="18dp"
                 android:gravity="center"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@id/lastAt"
                 app:layout_constraintEnd_toEndOf="@id/subject"
                 app:layout_constraintTop_toTopOf="@id/lastAt"
