--- a/app/src/main/res/layout/item_thread_message_my.xml
+++ b/app/src/main/res/layout/item_thread_message_my.xml
@@ -66,7 +66,7 @@
             android:layout_marginEnd="@dimen/padding_small"
             android:textColor="?textColorPrimary"
             app:layout_constraintEnd_toStartOf="@id/readed"
-            app:layout_constraintTop_toBottomOf="@id/barrier"
+            app:layout_constraintTop_toBottomOf="@id/attachments"
             tools:text="Час назад" />
 
         <ImageView
@@ -82,6 +82,18 @@
             app:layout_constraintBottom_toBottomOf="@id/postedAt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/postedAt" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/attachments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/message_send"
+            android:layout_marginTop="@dimen/padding_small"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/barrier"
+            tools:itemCount="2"
+            tools:listitem="@layout/item_threads_attachment_my" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
