--- a/app/src/main/res/drawable/mail.xml
+++ b/app/src/main/res/drawable/mail.xml
@@ -2,15 +2,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="40"
-    android:viewportHeight="40">
+    android:viewportWidth="512"
+    android:viewportHeight="512">
 
     <path
-        android:fillColor="#000000"
-        android:fillType="evenOdd"
-        android:pathData="M4.995,7.015 L34.988,7.015 C35.465,7.015,35.904,7.183,36.249,7.464
-L19.991,21.009 L3.734,7.465 C4.079,7.184,4.518,7.015,4.995,7.015 L4.995,7.015 Z
-M36.988,9.847 L19.991,24.008 L2.996,9.849 L2.996,28.006
-C2.996,29.106,3.895,30.006,4.995,30.006 L34.988,30.006
-C36.089,30.006,36.988,29.106,36.988,28.006 L36.988,9.847 Z" />
+        android:fillColor="#000"
+        android:pathData="M502.3,190.8 C506.2,187.7,512,190.6,512,195.5 L512,400
+C512,426.5,490.5,448,464,448 L48,448 C21.5,448,0,426.5,0,400 L0,195.6
+C0,190.6,5.7,187.8,9.7,190.9 C32.1,208.3,61.8,230.4,163.8,304.5
+C184.9,319.9,220.5,352.3,256,352.1 C291.7,352.4,328,319.3,348.3,304.5
+C450.3,230.4,479.9,208.2,502.3,190.8 Z M256,320
+C279.2,320.4,312.6,290.8,329.4,278.6 C462.1,182.3,472.2,173.9,502.8,149.9
+C508.6,145.4,512,138.4,512,131 L512,112 C512,85.5,490.5,64,464,64 L48,64
+C21.5,64,0,85.5,0,112 L0,131 C0,138.4,3.4,145.3,9.2,149.9
+C39.8,173.8,49.9,182.3,182.6,278.6 C199.4,290.8,232.8,320.4,256,320 Z" />
 </vector>
