--- a/app/src/main/res/drawable/about.xml
+++ b/app/src/main/res/drawable/about.xml
@@ -1,7 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
     android:width="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path android:fillColor="#000" android:pathData="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+
+    <path
+        android:fillColor="#000"
+        android:pathData="M256,8 C119.043,8,8,119.083,8,256 C8,392.997,119.043,504,256,504
+S504,392.997,504,256 C504,119.083,392.957,8,256,8 Z M256,118
+C279.196,118,298,136.804,298,160 S279.196,202,256,202 S214,183.196,214,160
+S232.804,118,256,118 Z M312,372 C312,378.627,306.627,384,300,384 L212,384
+C205.373,384,200,378.627,200,372 L200,348 C200,341.373,205.373,336,212,336
+L224,336 L224,272 L212,272 C205.373,272,200,266.627,200,260 L200,236
+C200,229.373,205.373,224,212,224 L276,224 C282.627,224,288,229.373,288,236
+L288,336 L300,336 C306.627,336,312,341.373,312,348 L312,372 Z" />
 </vector>
