--- a/app/src/main/res/drawable/employers.xml
+++ b/app/src/main/res/drawable/employers.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="40"
-    android:viewportHeight="40">
+    android:width="20dp"
+    android:height="22dp"
+    android:viewportWidth="448"
+    android:viewportHeight="512">
 
     <path
-        android:fillColor="#000000"
-        android:pathData="M5.174,8.994 L13.972,8.994 L13.972,4.404 C13.972,3.629,14.604,2.996,15.38,2.996
-L24.593,2.996 C25.368,2.996,26,3.629,26,4.404 L26,8.994 L34.798,8.994
-C36.009,8.994,36.998,9.982,36.998,11.193 L36.998,18.99 L22.97,18.99
-L22.97,24.988 L16.971,24.988 L16.971,18.99 L2.975,18.99 L2.975,11.194
-C2.974,9.982,3.962,8.994,5.174,8.994 L5.174,8.994 Z M16.971,8.994 L22.97,8.994
-L22.97,5.995 L16.971,5.995 L16.971,8.994 L16.971,8.994 Z M36.998,20.989
-L25.001,20.989 L25.001,26.987 L14.972,26.987 L14.972,20.989 L2.975,20.989
-L2.975,31.784 C2.975,32.995,3.963,33.984,5.174,33.984 L34.799,33.984
-C36.01,33.984,36.999,32.996,36.999,31.784 L36.999,20.989 Z" />
+        android:fillColor="#000"
+        android:pathData="M224,256 C294.7,256,352,198.7,352,128 S294.7,0,224,0 S96,57.3,96,128
+S153.3,256,224,256 Z M319.8,288.6 L272,480 L240,344 L272,288 L176,288 L208,344
+L176,480 L128.2,288.6 C56.9,292,0,350.3,0,422.4 L0,464 C0,490.5,21.5,512,48,512
+L400,512 C426.5,512,448,490.5,448,464 L448,422.4
+C448,350.3,391.1,292,319.8,288.6 Z" />
 </vector>
