--- a/app/src/main/res/layout/item_menu_threads.xml
+++ b/app/src/main/res/layout/item_menu_threads.xml
@@ -12,7 +12,7 @@
         android:layout_height="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mail"
+        app:srcCompat="@drawable/mail_empty"
         app:tint="@drawable/menu_icon_background" />
 
     <TextView
